// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PitchedRoofCalculator PDF components renders h1 Typograph correctly 1`] = `
Document {
  "docDefinition": {
    "stack": [
      {
        "alignment": "left",
        "bold": true,
        "fontSize": 22.5,
        "lineHeight": 1.33,
        "text": "Heading 1",
      },
      {
        "canvas": [
          {
            "key": null,
            "lineColor": "#009FE3",
            "lineWidth": 4,
            "props": undefined,
            "type": "line",
            "x1": 0,
            "x2": 100,
            "y1": 0,
            "y2": 0,
          },
        ],
      },
    ],
  },
  "fonts": {
    "Roboto": {
      "bold": "Roboto-Medium.ttf",
      "bolditalics": "Roboto-MediumItalic.ttf",
      "italics": "Roboto-Italic.ttf",
      "normal": "Roboto-Regular.ttf",
    },
  },
  "tableLayouts": null,
  "vfs": undefined,
}
`;

exports[`PitchedRoofCalculator PDF tool avoids rendering empty tables results 1`] = `
Document {
  "docDefinition": {
    "content": [
      {
        "alignment": "center",
        "bold": true,
        "fontSize": 18,
        "lineHeight": 1.33,
        "text": "Your solution contains",
      },
      {
        "alignment": "center",
        "bold": true,
        "fontSize": 12,
        "lineHeight": 1.4,
        "text": [
          "For the total measured area for your roof: 150m",
          {
            "alignment": "left",
            "fontSize": 10,
            "lineHeight": 1.4,
            "sup": true,
            "text": "2",
          },
        ],
      },
      {
        "alignment": "center",
        "fontSize": 10,
        "lineHeight": 1.4,
        "margin": [
          100,
          0,
          100,
          0,
        ],
        "text": "Disclaimer: We strive to be within 5-10% accurate. We've also added a wastage contingency of: 5% into this material calculation",
      },
      null,
      null,
      null,
      null,
      null,
      null,
      {
        "layout": "noBorders",
        "marginLeft": -25,
        "marginTop": 40,
        "table": {
          "body": [
            [
              {
                "bold": true,
                "color": "#3B3B3B",
                "fillColor": "#F0F0F0",
                "margin": [
                  25,
                  15,
                  25,
                  5,
                ],
                "text": "Need to know",
              },
            ],
            [
              {
                "color": "#3B3B3B",
                "fillColor": "#F0F0F0",
                "margin": [
                  25,
                  0,
                  25,
                  15,
                ],
                "text": "We’ve added a wastage contingency of: 5% into this material calculation.",
              },
            ],
          ],
          "widths": [
            595.28,
          ],
        },
      },
    ],
    "defaultStyle": {
      "font": "Effra",
    },
    "header": [Function],
    "images": {},
    "pageBreakBefore": [Function],
    "pageMargins": [
      25,
      70,
      25,
      35,
    ],
    "pageOrientation": "portrait",
    "pageSize": "A4",
  },
  "fonts": {
    "Effra": {
      "bold": "",
      "normal": "",
    },
  },
  "tableLayouts": null,
  "vfs": undefined,
}
`;

exports[`PitchedRoofCalculator PDF tool renders PDF correctly 1`] = `
Document {
  "docDefinition": {
    "content": [
      {
        "alignment": "center",
        "bold": true,
        "fontSize": 18,
        "lineHeight": 1.33,
        "text": "Your solution contains",
      },
      {
        "alignment": "center",
        "bold": true,
        "fontSize": 12,
        "lineHeight": 1.4,
        "text": [
          "For the total measured area for your roof: 150m",
          {
            "alignment": "left",
            "fontSize": 10,
            "lineHeight": 1.4,
            "sup": true,
            "text": "2",
          },
        ],
      },
      {
        "alignment": "center",
        "fontSize": 10,
        "lineHeight": 1.4,
        "margin": [
          100,
          0,
          100,
          0,
        ],
        "text": "Disclaimer: We strive to be within 5-10% accurate. We've also added a wastage contingency of: 5% into this material calculation",
      },
      [
        {
          "alignment": "center",
          "bold": true,
          "fontSize": 12,
          "lineHeight": 1.65,
          "margin": [
            0,
            25,
            0,
            10,
          ],
          "text": "Tiles",
        },
        {
          "layout": {
            "fillColor": [Function],
            "hLineColor": [Function],
            "vLineColor": [Function],
            "vLineWidth": [Function],
          },
          "table": {
            "body": [
              [
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    14,
                    8,
                    5,
                    10,
                  ],
                  "text": " ",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Product",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Pack size",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Nobb no",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Quantity",
                },
              ],
              [
                [
                  {
                    "fit": [
                      50,
                      50,
                    ],
                    "image": "data:image/jpg;base64,imagedata",
                  },
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Zanda Protector main tile black",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "46035712",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "1350",
                },
              ],
              [
                [
                  {
                    "fit": [
                      50,
                      50,
                    ],
                    "image": "data:image/jpg;base64,imagedata",
                  },
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Zanda Protector half tile black",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "46035795",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "30",
                },
              ],
              [
                [
                  {
                    "fit": [
                      50,
                      50,
                    ],
                    "image": "data:image/jpg;base64,imagedata",
                  },
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Zanda_Protector_ridge tile black",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "46035761",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "46",
                },
              ],
            ],
            "headerRows": 1,
            "widths": [
              80,
              180,
              110,
              70,
              65,
            ],
          },
        },
      ],
      null,
      [
        {
          "alignment": "center",
          "bold": true,
          "fontSize": 12,
          "lineHeight": 1.65,
          "margin": [
            0,
            25,
            0,
            10,
          ],
          "text": "Ventilation",
        },
        {
          "layout": {
            "fillColor": [Function],
            "hLineColor": [Function],
            "vLineColor": [Function],
            "vLineWidth": [Function],
          },
          "table": {
            "body": [
              [
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    14,
                    8,
                    5,
                    10,
                  ],
                  "text": " ",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Product",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Pack size",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Nobb no",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Quantity",
                },
              ],
              [
                [
                  "",
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Ventilation Hood 1",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "100456781",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "1",
                },
              ],
            ],
            "headerRows": 1,
            "widths": [
              80,
              180,
              110,
              70,
              65,
            ],
          },
        },
      ],
      null,
      [
        {
          "alignment": "center",
          "bold": true,
          "fontSize": 12,
          "lineHeight": 1.65,
          "margin": [
            0,
            25,
            0,
            10,
          ],
          "text": "Accessories",
        },
        {
          "layout": {
            "fillColor": [Function],
            "hLineColor": [Function],
            "vLineColor": [Function],
            "vLineWidth": [Function],
          },
          "table": {
            "body": [
              [
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    14,
                    8,
                    5,
                    10,
                  ],
                  "text": " ",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Product",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Pack size",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Nobb no",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Quantity",
                },
              ],
              [
                [
                  {
                    "fit": [
                      50,
                      50,
                    ],
                    "image": "data:image/jpg;base64,imagedata",
                  },
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Zanda_Protector_verge metal flush black left start",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "86035763",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "2",
                },
              ],
              [
                [
                  {
                    "fit": [
                      50,
                      50,
                    ],
                    "image": "data:image/jpg;base64,imagedata",
                  },
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Zanda_Protector_verge metal flush black left",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "86035761",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "100",
                },
              ],
              [
                [
                  {
                    "fit": [
                      50,
                      50,
                    ],
                    "image": "data:image/jpg;base64,imagedata",
                  },
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Zanda_Protector_verge metal flush black right start",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "86035764",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "2",
                },
              ],
              [
                [
                  {
                    "fit": [
                      50,
                      50,
                    ],
                    "image": "data:image/jpg;base64,imagedata",
                  },
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Zanda_Protector_verge metal flush black right",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "86035762",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "100",
                },
              ],
              [
                [
                  "",
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Clips",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "113456781",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "92",
                },
              ],
              [
                [
                  "",
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Ridge and Hip Screw",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "113456782",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "92",
                },
              ],
              [
                [
                  "",
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Long Screw",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "113456783",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "267",
                },
              ],
              [
                [
                  "",
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Screw",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "113456784",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "1249",
                },
              ],
              [
                [
                  "",
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Finishing Kit",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "113456786",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "1",
                },
              ],
              [
                [
                  {
                    "fit": [
                      50,
                      50,
                    ],
                    "image": "data:image/jpg;base64,imagedata",
                  },
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Underlay Divoroll TOP RU",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "26583450",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "3",
                },
              ],
              [
                [
                  {
                    "fit": [
                      50,
                      50,
                    ],
                    "image": "data:image/jpg;base64,imagedata",
                  },
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Fuglelist ventilert",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "5555551",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "6",
                },
              ],
              [
                [
                  {
                    "fit": [
                      50,
                      50,
                    ],
                    "image": "data:image/jpg;base64,imagedata",
                  },
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Other accesories example",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "5555550",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "0",
                },
              ],
            ],
            "headerRows": 1,
            "widths": [
              80,
              180,
              110,
              70,
              65,
            ],
          },
        },
      ],
      [
        {
          "alignment": "center",
          "bold": true,
          "fontSize": 12,
          "lineHeight": 1.65,
          "margin": [
            0,
            25,
            0,
            10,
          ],
          "text": "pdf.report.extras.section.title",
        },
        {
          "layout": {
            "fillColor": [Function],
            "hLineColor": [Function],
            "vLineColor": [Function],
            "vLineWidth": [Function],
          },
          "table": {
            "body": [
              [
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    14,
                    8,
                    5,
                    10,
                  ],
                  "text": " ",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Product",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Pack size",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Nobb no",
                },
                {
                  "bold": true,
                  "color": "#70706F",
                  "fontSize": 10,
                  "header": true,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Quantity",
                },
              ],
              [
                [
                  {
                    "fit": [
                      50,
                      50,
                    ],
                    "image": "data:image/jpg;base64,imagedata",
                  },
                ],
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "Ling screw",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "-",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "4325423",
                },
                {
                  "bold": false,
                  "color": "#70706F",
                  "fontSize": 10,
                  "height": 50,
                  "margin": [
                    5,
                    8,
                    5,
                    10,
                  ],
                  "text": "0",
                },
              ],
            ],
            "headerRows": 1,
            "widths": [
              80,
              180,
              110,
              70,
              65,
            ],
          },
        },
      ],
      {
        "layout": "noBorders",
        "marginLeft": -25,
        "marginTop": 40,
        "table": {
          "body": [
            [
              {
                "bold": true,
                "color": "#3B3B3B",
                "fillColor": "#F0F0F0",
                "margin": [
                  25,
                  15,
                  25,
                  5,
                ],
                "text": "Need to know",
              },
            ],
            [
              {
                "color": "#3B3B3B",
                "fillColor": "#F0F0F0",
                "margin": [
                  25,
                  0,
                  25,
                  15,
                ],
                "text": "We’ve added a wastage contingency of: 5% into this material calculation.",
              },
            ],
          ],
          "widths": [
            595.28,
          ],
        },
      },
    ],
    "defaultStyle": {
      "font": "Effra",
    },
    "header": [Function],
    "images": {},
    "pageBreakBefore": [Function],
    "pageMargins": [
      25,
      70,
      25,
      35,
    ],
    "pageOrientation": "portrait",
    "pageSize": "A4",
  },
  "fonts": {
    "Effra": {
      "bold": "",
      "normal": "",
    },
  },
  "tableLayouts": null,
  "vfs": undefined,
}
`;
